# EVMOpSemCoq

./: README.md  _CoqProject
theories/: LICENSE  block.v  block_auxiliary.v  dune  evm.v  evm_auxiliary.v  helper.v  keccak.v  keccak_auxiliary.v  rlplem.v  rlplem_auxiliary.v  word160.v  word160_auxiliary.v  word256.v  word256_auxiliary.v  word32.v  word32_auxiliary.v  word4.v  word4_auxiliary.v  word64.v  word64_auxiliary.v  word8.v  word8_auxiliary.v
theories/Lem/: LICENSE  coqharness.v  lem_num.v
